added profile selection options. Updated UI (still bad at least in terms of behaviour)

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
       },
       {
         "command": "cmakebuildconfigurator.cmakeTargets",
-        "title": "CmakeTarge"
+        "title": "CmakeTarget"
       },
       {
         "command": "cmakebuildconfigurator.runCommand",
